--- a/public/template/html/home/index.html
+++ b/public/template/html/home/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="../../assets/css/theme.css">
   
   <!-- CUSTOM CSS -->
-  <link rel="stylesheet" href="../../assets/css/custom.css">
+  <link rel="stylesheet" href="/public/css/custom.css">
   
 </head>
 
@@ -1820,6 +1820,7 @@
   <script src="../../assets/js/components/hs.show-animation.js"></script>
   <script src="../../assets/js/components/hs.svg-injector.js"></script>
   <script src="../../assets/js/components/hs.go-to.js"></script>
+
 
   <!-- JS Plugins Init. -->
   <script>
