--- a/views/home.html
+++ b/views/home.html
@@ -20,7 +20,7 @@
             <a class="btn btn-soft-primary btn-wide transition-3d-hover" href="html/pages/login-simple.html">Get
               Started</a>
 
-            <a class="btn btn-soft-primary btn-wide transition-3d-hover" href="/public/html/pages/order-wizard.html">Order
+            <a class="btn btn-soft-primary btn-wide transition-3d-hover" href="wizard">Order
               Now</a>
 
             <!-- Fancybox -->
