--- a/views/layout.html
+++ b/views/layout.html
@@ -10,7 +10,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="../favicon.ico">
+	<link rel="shortcut icon" href="/favicon.ico">
 
 	<!-- Google Fonts -->
 	<link href="//fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
@@ -860,7 +860,12 @@
 
 	<!-- ========== MAIN CONTENT ========== -->
 	<main id="content" role="main">
-		@{body}
+		<div class="d-lg-flex position-relative">
+			<div class="container d-lg-flex align-items-lg-center space-top-2 space-top-md-5 space-lg-4 min-height-lg-100vh">
+
+				@{body}
+			</div>
+		</div>
 	</main>
 	<!-- ========== END MAIN CONTENT ========== -->
 
@@ -1262,7 +1267,7 @@
 	<script src="/template/assets/js/components/hs.go-to.js"></script>
 
 	<!-- JS Custom -->
-	<script src="/dist/build.js"></script>
+
 
 	<!-- JS Plugins Init. -->
 	<script>
