checkpoint; wizard changing based on v-if. Working on fixing bug where selection on one page marks the next

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -15,6 +15,14 @@
 
 /* Utilities */
 
+.cursor-pointer {
+    cursor: pointer;
+}
+
+.markOnHover:hover {
+    background-color: cadetblue;
+}
+
 .center {
     margin: 0 auto;
 }
