--- a/views/wizard.html
+++ b/views/wizard.html
@@ -2,7 +2,7 @@
 <div id='wizard-html'>
 
   <div class="text-center">
-    <h1>HOOKAH ORDER WIZARD - html</h1>      
+    <h1>HOOKAH ORDER WIZARD</h1>      
   </div>
 
   <div id="app"></div>
