temp files added

--- a/views/home.html
+++ b/views/home.html
@@ -44,4 +44,4 @@
 </div>
 <!-- ========== END MAIN CONTENT ========== -->
 
-<!-- <script src="js/home.js"></script> -->
+<script src="js/home.js"></script>
