validate and wizzard page

--- a/views/layout.html
+++ b/views/layout.html
@@ -36,7 +36,7 @@
 
 <body>
 	<!-- ========== HEADER ========== -->
-	<header id="header" class="u-header u-header--abs-top-md u-header--bg-transparent u-header--show-hide-md"
+	<header id="header" class="u-header u-header--abs-top-md u-header--show-hide-md"
 	 data-header-fix-moment="500" data-header-fix-effect="slide">
 		<!-- Search -->
 		<div id="searchPushTop" class="u-search-push-top">
@@ -309,7 +309,7 @@
 	<!-- ========== END HEADER ========== -->
 
 	<!-- ========== MAIN CONTENT ========== -->
-	<main id="content" role="main">
+	<main id="content" role="main" style=' background-image:url("/img/shisha/background2.jpg"); background-size: cover; ' >
 		<div class="d-lg-flex position-relative">
 			<div class="container d-lg-flex align-items-lg-center space-top-2 space-top-md-5 space-lg-4 min-height-lg-100vh">
 
